feat: Implement Database Resource and Metadata Indexer
This commit introduces the necessary components for indexing simulation metadata into a database, establishing a key part of the data pipeline for analysis and querying.

The following components have been added:
- `IMetadataDatabase`: A new capability interface for metadata database operations.
- `AbstractDatabaseResource`: A base class for database resources, handling common logic like monitoring and resource wrapping.
- `H2Database`: A concrete H2 database implementation using HikariCP for connection pooling. It supports both in-memory and file-based modes.
- `MetadataDatabaseWrapper`: A wrapper to provide context-specific, monitored access to the database resource.
- `AbstractIndexer`: A base service class that handles the logic for discovering simulation runs, either via configuration or by polling storage.
- `MetadataIndexer`: A new service that uses the run discovery mechanism to find simulation metadata and index it into the database.

Additionally, the `IBatchStorageRead` interface and its implementations have been updated with a `listRunIds(Instant afterTimestamp)` method to enable the timestamp-based discovery mode for indexers.

Integration tests (`MetadataIndexerIntegrationTest`) have been added to verify the complete data flow for both post-mortem and parallel indexing modes, ensuring the system works as designed.